--- a/JS/TP1/ex6/styles/index.css
+++ b/JS/TP1/ex6/styles/index.css
@@ -54,8 +54,20 @@ footer address p{
 }
 /* ------------------------------------------------------------- */
 .ex5 {
-	position : relative;
-	background-image: url(../images/bipbip.jpg);
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
+	background-color: #FF0000;
+}
+
+table  tr  td {
+	font-family: serif;
+	font-size: 2.0em;
+	width: 2.0em;
+	height: 2.0em;
+	text-align: center;
+	padding:0;
+}
+
+.noir {
+	background-color: #000000;
 }
